Add arrow encoding to spooling
(cherry picked from commit 3a9394210288fa2c84f0d3d6460e1113469ddd49)